# smart-contracts

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: Basic.yml  coverage.yml
contracts/airdrop-genesis/: Cargo.toml  README.md
contracts/airdrop-genesis/examples/: airdrop-genesis-schema.rs
contracts/airdrop-genesis/schema/: airdrop_account.json  airdrop_info.json  airdrop_user_info_response.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/airdrop-genesis/src/: contract.rs  errors.rs  execute.rs  lib.rs  querier.rs  queries.rs  state.rs  tools.rs
contracts/airdrop-genesis/src/testing/: mock_querier.rs  tests.rs
contracts/cw20/: Cargo.toml  README.md
contracts/cw20/src/: contract.rs
contracts/ido/: Cargo.toml  README.md
contracts/ido/examples/: ido-schema.rs
contracts/ido/schema/: allocation_info.json  config_response.json  execute_msg.json  instantiate_msg.json  participant_info_response.json  participant_response.json  participants_response.json  query_msg.json  state_response.json  status_response.json
contracts/ido/src/: contract.rs  errors.rs  execute.rs  lib.rs  querier.rs  queries.rs  state.rs  tools.rs
contracts/ido/src/testing/: mock_querier.rs  tests.rs
contracts/kyc-vault/: Cargo.toml  README.md
contracts/kyc-vault/examples/: kyc-vault-schema.rs
contracts/kyc-vault/schema/: config_response.json  execute_msg.json  instantiate_msg.json  is_accepted_response.json  is_accepted_verified_response.json  is_verified_response.json  query_msg.json
contracts/kyc-vault/src/: contract.rs  errors.rs  execute.rs  lib.rs  queries.rs  state.rs  tools.rs
contracts/kyc-vault/src/testing/: tests.rs
contracts/staking-gateway/: Cargo.toml  README.md
contracts/staking-gateway/examples/: schema_staking_gateway.rs
contracts/staking-gateway/schema/: addresses_response.json  can_stake_response.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/staking-gateway/src/: contract.rs  errors.rs  execute.rs  lib.rs  querier.rs  queries.rs  state.rs  tools.rs
contracts/staking-gateway/src/testing/: mock_querier.rs  mod.rs  tests.rs
contracts/vesting-gateway/: Cargo.toml  README.md
contracts/vesting-gateway/examples/: vesting-gateway-schema.rs
contracts/vesting-gateway/schema/: execute_msg.json  query_msg.json  vesting_addresses_response.json  vesting_by_user_response.json
contracts/vesting-gateway/src/: contract.rs  errors.rs  lib.rs  querier.rs  state.rs
contracts/vesting-gateway/src/testing/: tests.rs
