[package]
name = "starterra-staking-gateway"
version = "2.0.0"
authors = ["StarTerra developers"]
edition = "2018"
description = "A Staking gateway contract for StarTerra staking contracts"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.8.0"
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
starterra-token = { version = "2.0.0", path = "../../packages/starterra-token" }
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.16.0"
